--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_slidable: ^3.0.0
   intl: ^0.17.0
   google_mobile_ads: ^3.0.0
+  pattern_formatter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
