--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.17.0
   google_mobile_ads: ^3.0.0
   pattern_formatter: ^2.0.0
+  app_tracking_transparency: ^2.0.4
 
 dev_dependencies:
   flutter_test:
