--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+8
+version: 1.0.2+9
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -43,10 +43,11 @@ dependencies:
   path: ^1.8.0
   uuid: ^3.0.7
   flutter_slidable: ^3.0.0
-  intl: ^0.17.0
+  intl: ^0.18.0
   google_mobile_ads: ^3.0.0
-  pattern_formatter: ^2.0.0
+  pattern_formatter: ^3.0.0
   app_tracking_transparency: ^2.0.4
+  flutter_masked_text2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
