--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,16 @@ dependencies:
   path: ^1.8.0
   uuid: ^3.0.7
   flutter_slidable: ^3.0.0
-  intl: ^0.18.0
+  intl: ^0.17.0
   google_mobile_ads: ^3.0.0
-  pattern_formatter: ^3.0.0
+  pattern_formatter: ^2.0.0
   app_tracking_transparency: ^2.0.4
   flutter_masked_text2: ^0.9.1
   flutter_switch: ^0.3.2
+
+
+  localization: ^2.1.0
+  flutter_localization: ^0.1.12
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - lib/i18n/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeger to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
