--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,11 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+          ## dart: PermissionGroup.notification
+          'PERMISSION_NOTIFICATIONS=1',
+      ]
       config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
      end
   end
