--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,16 +41,16 @@ dependencies:
   dartz: ^0.10.1
   path_provider: ^2.0.15
   path: ^1.8.0
-  uuid: ^3.0.7
+  uuid: ^4.1.0
   flutter_slidable: ^3.0.0
-  intl: ^0.17.0
+  intl: ^0.18.1
   google_mobile_ads: ^3.0.0
-  pattern_formatter: ^2.0.0
+  pattern_formatter: ^3.0.0
   app_tracking_transparency: ^2.0.4
   flutter_masked_text2: ^0.9.1
   flutter_switch: ^0.3.2
-  flutter_local_notifications: ^15.1.0+1
-  permission_handler: ^10.4.3
+  flutter_local_notifications: ^16.1.0
+  permission_handler: ^11.0.1
   pie_chart: ^5.3.2
 
   localization: ^2.1.0
@@ -60,7 +60,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
   build_runner: ^2.0.0
   flutter_launcher_icons: ^0.13.1
 flutter_launcher_icons:
