--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.11+21
+version: 1.0.12+22
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -51,7 +51,7 @@ dependencies:
   flutter_switch: ^0.3.2
   flutter_local_notifications: ^16.1.0
   permission_handler: ^11.0.1
-  pie_chart: ^5.3.2
+  fl_chart: ^0.64.0
 
   localization: ^2.1.0
   flutter_localization: ^0.1.12
