--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^4.1.0
   intl: ^0.19.0
   google_mobile_ads: ^5.2.0
+  flutter_masked_text2: ^0.9.1
   app_tracking_transparency: ^2.0.4
   flutter_local_notifications: ^18.0.1
   permission_handler: ^11.0.1
