--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   localization: ^2.1.0
   flutter_localization: ^0.2.2
   shared_preferences: ^2.3.3
+  share_plus: ^10.1.3
+  screenshot: ^3.0.0
 
 dev_dependencies:
   flutter_test:
