--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   shared_preferences: ^2.3.3
   share_plus: ^10.1.3
   screenshot: ^3.0.0
+  dio: ^5.7.0
+  package_info_plus: ^8.1.2
 
 dev_dependencies:
   flutter_test:
