--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<!-- <key>NSUserTrackingUsageDescription</key>
 	<string>This identifier will be used to deliver personalized ads to you</string> -->
+	<key>FLTEnableImpeller</key>
+  	<false />
 	<key>PermissionGroupNotification</key>
 	<string>This identifier will be used to deliver personalized notification for you</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
