nova versao com pagamentos

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,14 +33,13 @@ android {
 
     compileOptions {
         coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = "17"
     }
-
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -75,6 +74,9 @@ android {
 }
 
 dependencies {
+  def billing_version = "7.0.0"
+
+  implementation "com.android.billingclient:billing:$billing_version"
   coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
 
