--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   dio: ^5.7.0
   package_info_plus: ^8.1.2
   url_launcher: ^6.3.1
+  in_app_purchase: ^3.2.3
 
 dev_dependencies:
   flutter_test:
