--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.4.2+62
+version: 2.5.0+65
 
 environment:
   sdk: ^3.5.4
@@ -56,6 +56,11 @@ dependencies:
   package_info_plus: ^8.1.2
   url_launcher: ^6.3.1
   in_app_purchase: ^3.2.3
+
+  as_design_system:
+    git:
+      url: https://github.com/andrelucassvt/as-design-system.git
+      ref: main
   
 
 dev_dependencies:
